--- a/style.css
+++ b/style.css
@@ -3,10 +3,12 @@ body {
     padding: 50px;
 }
 
+
+/* STYLE NAVBAR */
 nav {
     width: 100%;
     height: auto;
-    border-bottom: 1px solid black;
+    border-bottom: 2px solid rgb(1, 255, 51);
 }
 
 
@@ -19,7 +21,7 @@ nav {
     width: 80px;
     position: relative;
     bottom: 6px;
-    right: 15px;
+    right: 13px;
 }
 
 .SMK {
@@ -28,3 +30,36 @@ nav {
     right: 28px;
     bottom: 10px;
 }
+
+.text {
+    position: absolute;
+    top: 70px;
+    right: 55px;
+}
+
+.text a {
+    font-family: RobotoSlab, sans-serif;
+    color: #000;
+    display: inline-block;
+    padding-right: 30px;
+    text-decoration:none ;
+    font-size: 15px;
+}
+
+a:hover {
+    color: #14f304b4;
+}
+/* AKHIR STYLE NAVBAR */
+
+/* poster */
+
+.poster {
+    text-align: center;
+}
+
+
+.poster img {
+    width: 1100px;
+    height: 400px;
+}
+/* AKHIR POSTER */
