--- a/style.css
+++ b/style.css
@@ -1,70 +1,52 @@
-body {
+*   {
     margin: 0;
-    padding: 50px;
+    padding: 0;
+    box-sizing: 0;
+    font-family: 'RobotoSlab', sans-serif;
+    text-decoration: none;
 }
 
+body    {
+    position: relative;
+    height: 100vh;
+}
 
-/* STYLE NAVBAR */
+/*style navbar*/
+
 nav {
-    width: 100%;
-    height: auto;
-    border-bottom: 2px solid rgb(1, 255, 51);
+    background-color: #191e24f5;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 50px;
+    padding: 15px 50px;
+    box-shadow: 10px 10px 10px rgba(128, 128, 128, 0.548);
+    color: #fff;
 }
 
-
-.SMAFTI {
-    width: 80px;
+nav ul  {
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+    gap: 20px;
 }
 
-
-.TELKOM {
-    width: 80px;
-    position: relative;
-    bottom: 6px;
-    right: 13px;
+li {
+    width: 70px;
 }
 
-.SMK {
-    width: 100px;
-    position: relative;
-    right: 28px;
-    bottom: 10px;
+li a {
+    font-size: 1.1rem;
+    cursor: pointer;
+    padding: 20px 15px;
+    transition: 0.5s;
+    color: #fff;
 }
 
-.text {
-    position: absolute;
-    top: 70px;
-    right: 55px;
-}
-
-.text a {
-    font-family: RobotoSlab, sans-serif;
-    color: #000;
-    display: inline-block;
-    padding-right: 30px;
-    text-decoration:none ;
-    font-size: 15px;
-}
-
-a:hover {
-    color: #14f304b4;
+li a:hover  {
+    color: #f1c40f;
+    border-bottom: 4px #f1c40f solid;
     transition: 0.5s;
 }
-/* AKHIR STYLE NAVBAR */
 
-/* poster */
-.poster {
-    text-align: center;
-}
-.poster img {
-    width: 900px;
-}
-
-/* AKHIR POSTER */
-
-/*style image*/
-.image img {
-    width: 150px;
-    display: inline-block;
-}
-/*akhir style image*/
+/*akhir style navbar*/
