--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 }
 
 body    {
+    padding: 0 50px;
     position: relative;
     height: 100vh;
 }
@@ -14,21 +15,21 @@ body    {
 /*style navbar*/
 
 nav {
-    background-color: #191e24f5;
+    
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 50px;
-    padding: 15px 50px;
-    box-shadow: 10px 10px 10px rgba(128, 128, 128, 0.548);
-    color: #fff;
+    padding: 3px 50px;
+    border-bottom: 2px #04f800 solid;
+    color: #000;
 }
 
 nav ul  {
     list-style-type: none;
     display: flex;
     align-items: center;
-    gap: 20px;
+    gap: 40px;
 }
 
 li {
@@ -40,7 +41,7 @@ li a {
     cursor: pointer;
     padding: 20px 15px;
     transition: 0.5s;
-    color: #fff;
+    color: #000;
 }
 
 li a:hover  {
