--- a/style.css
+++ b/style.css
@@ -45,6 +45,38 @@ li a:hover  {
     transition: 0.3s;
 }
 
+.hide {
+    top: 70px;
+}
+
+@media screen and (max-width: 700px) {
+    .burger {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+        cursor: pointer;
+        padding: 10px;
+        margin-right: -10px;
+    }
+
+    .lines  {
+        display: block;
+        background-color: #fff;
+        height: 2px;
+        width: 35px;
+    }
+
+    .lines-rotate   {
+        background-color: green;
+        border-radius: 5px;
+    }
+
+    nav {
+        position: relative;
+        
+    }
+}
+
 /*akhir style navbar*/
 
 /*style poster*/
