--- a/style.css
+++ b/style.css
@@ -84,10 +84,7 @@ li a:hover  {
         position: absolute;
         top: -300px;
         right: 0;
-        background-color: #f1c40f;
         padding: 35px 0;
-        border-radius: 0 0 20px 20px;
-        box-shadow: 0px 5px 5px rgba(128, 128, 128, 0.363);
     }
 
     li a {
@@ -101,7 +98,7 @@ li a:hover  {
 
     li a:hover {
         font-weight: bold;
-        color: #191e24;
+        color: #121211;
         border: none;
         letter-spacing: 3px;
     }
@@ -109,6 +106,3 @@ li a:hover  {
 
 /*akhir style navbar*/
 
-/*style poster*/
-
-/*akhir style poster*/
